# fdr-rust-poc

./: .env  .envrc  .gitignore  Cargo.toml  README.MD  README.md  docker-compose.yml  flake.nix
database-migrations/: 20230526174532_initial_schema.sql  20230616090000_benefit_claims_and_evaluations.sql
src/: cli.rs  db.rs  dtos.rs  main.rs  person.rs
src/person/: struct_utils.rs
