[package]
name = "felles-data-registre-rust-poc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "deprecated", "unstable-v5", "wrap_help", "unicode"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
log = "0.4.17"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio", "postgres", "uuid", "json"] }
# Comment in when in use, speeds up some compilation:
# sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls"] } # Non-windows only, for now. See above issue.
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
