[package]
name = "felles-data-registre-rust-poc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "deprecated", "unstable-v5", "wrap_help", "unicode"] }
clap-verbosity-flag = "2"
color-eyre = "0.6"
log = "0.4"
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
sqlx = { version = "0.6", features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket_db_pools = {version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["serde", "v7"] }
